--- a/tools/abnoeg_ir_hookpush.yaml
+++ b/tools/abnoeg_ir_hookpush.yaml
@@ -36,8 +36,8 @@ With hookpush:
     Kak 2: 7'52 # [menu]
     # shop is the volatile screen
     Shop: 11'28
-    IR pit: 3'56 # 3'54 with a double dash that sux
+    IR pit 1: 3'56 # 3'54 with a double dash that sux
     IR: 6'20
-    IR pit: 2'36
+    IR pit 2: 2'36
     Kak 3: 7'04
     VoO 2: 9'23
