--- a/tools/abnoeg_ir_hookpush.yaml
+++ b/tools/abnoeg_ir_hookpush.yaml
@@ -1,43 +1,49 @@
 ---
+title: All Bosses no EG Ice Rod hookpush
 
-Without hookpush:
-    # smiths segment
-    VoO 1: 3'39
-    Starting smiths mirror: 1'32
-    Entering smiths: 8'01
-    # === same smiths screens until ====
-    # [these two are kind of combined, 10'15 is about the best i can get
-    Entering portal: 6'00
-    Walking left: 4'15
-    VoO 2: 7'17
+routes:
+    Without hookpush:
+        saha rupees: 4'20
 
-    # IR get
-    # These are hard to time in the prachack, but it looks like s&q to leaving links house is around 9s
-    s&q to link's house: 8'00
-    link's house: 1'00
-    link overworld: 5'29
-    # bridge is the volatile screen
-    bridge: 11'06 
-    river: 7'40
-    IR ow: 5'27
-    IR pit: 3'34
-    IR: 5'04 # is the last timer update on opening the chest
+        # smiths segment
+        VoO 1: 3'39
+        Starting smiths mirror: 1'32
+        Entering smiths: 8'01
+        # === same smiths screens until ====
+        # [these two are kind of combined, 10'15 is about the best i can get
+        Entering portal: 6'00
+        Walking left: 4'15
+        VoO 2: 7'17
 
-With hookpush:
+        # IR get
+        # These are hard to time in the prachack, but it looks like s&q to leaving links house is around 9s
+        s&q to link's house: 8'00
+        link's house: 1'00
+        link overworld: 5'29
+        # bridge is the volatile screen
+        bridge: 11'06 
+        river: 7'40
+        IR ow: 5'27
+        IR pit: 3'34
+        IR: 5'04 # is the last timer update on opening the chest
 
-    # smiths:
+    With hookpush:
 
-    VoO 1: 2'56
-    Kak 1: 5'09 # [the mirror is *not* included in this one]
-    Entering smiths: 4'52
-    # rest as normal until the final dash out
-    Leaving smiths: 6'02
+        saha rupees: 5'52
 
-    Kak 2: 7'52 # [menu]
-    # shop is the volatile screen
-    Shop: 11'28
-    IR pit 1: 3'56 # 3'54 with a double dash that sux
-    IR: 6'20
-    IR pit 2: 2'36
-    Kak 3: 7'04
-    VoO 2: 9'23
+        # smiths:
+
+        VoO 1: 2'56
+        Kak 1: 5'09 # [the mirror is *not* included in this one]
+        Entering smiths: 4'52
+        # rest as normal until the final dash out
+        Leaving smiths: 6'02
+
+        Kak 2: 7'52 # [menu]
+        # shop is the volatile screen
+        Shop: 11'28
+        IR pit 1: 3'56 # 3'54 with a double dash that sux
+        IR: 6'20
+        IR pit 2: 2'36
+        Kak 3: 7'04
+        VoO 2: 9'23
